# ReMo

./: .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  Changelog.md  README.md
CMake/: CPackConfig.cmake  FindFFmpeg.cmake
ReMo/: CMakeLists.txt
ReMo/flow/: Flow.cpp  Flow.h  FlowDeviceToSDLViewer.cpp  FlowDeviceToSDLViewer.h  FlowDeviceToVideoFile.cpp  FlowDeviceToVideoFile.h  FlowDeviceToWebStream.cpp  FlowDeviceToWebStream.h  flow.cpp  flow.h  flowDeviceToSDLViewer.cpp  flowDeviceToSDLViewer.h  flowDeviceToVideoFile.cpp  flowDeviceToVideoFile.h  flowDeviceToWebStream.cpp  flowDeviceToWebStream.h
ReMo/media/: FFMedia.cpp  FFMedia.h  Media.cpp  Media.h  MediaDesktop.cpp  MediaDesktop.h  MediaImage.cpp  MediaImage.h  MediaSDLViewer.cpp  MediaSDLViewer.h  MediaVideoFile.cpp  MediaVideoFile.h  MediaWebCam.cpp  MediaWebCam.h  MediaWebStreamer.cpp  MediaWebStreamer.h  ffMedia.cpp  ffMedia.h  media.cpp  media.h  mediaDesktop.cpp  mediaDesktop.h  mediaImage.cpp  mediaImage.h  mediaSDLViewer.cpp  mediaSDLViewer.h  mediaVideoFile.cpp  mediaVideoFile.h  mediaWebCam.cpp  mediaWebCam.h  mediaWebStreamer.cpp  mediaWebStreamer.h
ReMo/pipeline/: AbstractImageSampler.cpp  AbstractImageSampler.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FFOperation.cpp  FFOperation.h  FFPipeline.cpp  FFPipeline.h  Filter.cpp  Filter.h  Gauss.cpp  Gauss.h  ImageConverter.cpp  ImageConverter.h  ImgProc.cpp  ImgProc.h  Muxer.cpp  Muxer.h  Operation.cpp  Operation.h  Pipeline.cpp  Pipeline.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  ffOperation.cpp  ffOperation.h  ffPipeline.cpp  ffPipeline.h  filter.cpp  filter.h  gauss.cpp  gauss.h  imgProc.cpp  imgProc.h  muxer.cpp  muxer.h  (+4 more)
ReMo/stream/: FFStream.cpp  FFStream.h  Stream.cpp  Stream.h  StreamDeviceIn.cpp  StreamDeviceIn.h  StreamSDLViewerOut.cpp  StreamSDLViewerOut.h  StreamVideoFileOut.cpp  StreamVideoFileOut.h  StreamWebStreamer.cpp  StreamWebStreamer.h  ffStream.cpp  ffStream.h  stream.cpp  stream.h  streamDeviceIn.cpp  streamDeviceIn.h  streamSDLViewerOut.cpp  streamSDLViewerOut.h  streamVideoFileOut.cpp  streamVideoFileOut.h  streamWebStreamer.cpp  streamWebStreamer.h
ReMo/util/: Config.cpp  Config.h  ErrorManager.cpp  ErrorManager.h  Logger.hpp  Utils.cpp  Utils.h  errorManager.cpp  errorManager.h  ffdefs.h  logger.hpp
ReMo/util/IO/: AbstractInputhandler.h  Abstractinputhandler.h  InputManager.cpp  InputManager.h  WSInputProcessor.cpp  WSInputProcessor.h  WebstreamerInputProcessor.cpp  WebstreamerInputProcessor.h  abstractInputhandler.h  inputManager.cpp  inputManager.h  webstreamerInputProcessor.cpp  webstreamerInputProcessor.h
ReMo/util/net/: ByteBuffer.cpp  ByteBuffer.h  Client.cpp  Client.h  Connection.cpp  Connection.h  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h  Runnable.h  SelectorThread.cpp  SelectorThread.h  Server.cpp  Server.h  ThreadPool.h
examples/: CMakeLists.txt  DesktopToVideo.cpp  DesktopToWebStream.cpp  PipelineSimpleTest.cpp  SDLDesktopViewer.cpp  SDLWebCamViewer.cpp  WebCamToVideo.cpp  WebCamToWebStream.cpp
